[package]
name = "meta-cross"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.7", default-features = false, features = ["http1", "ws"] }
byteorder = "1.4.3"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
rust-embed = "6.4.2"
tokio = { version = "1.25.0", features = ["sync", "rt-multi-thread", "macros"] }
